--- a/Aula02/index.html
+++ b/Aula02/index.html
@@ -27,7 +27,6 @@
         }
     </script>
 
-
 <hr>
 <h1>Aula02</h1>
 
@@ -36,6 +35,16 @@
     <input type="submit" value="Enviar">
 </form>
 <p id="info"></p>
+
+
+<hr>
+
+<input type="number" id="txtValor01"> <br>
+<input type="number" id="txtValor02"> <br>
+<button onclick="calcular()">Calcular</button> <br>
+<p id="pResult"></p>
+
+
 
 <script src="script.js"></script>
 
