--- a/Aula05-JSON/index.html
+++ b/Aula05-JSON/index.html
@@ -5,20 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula05 - JSON</title>
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
-    <button onclick="lerDados()">Ler Dados</button>
-    <div id="dados"></div>
+    <div class="container">
+        <div class="button-container" id="btnEsquerda">
+            <button onclick="lerDados()">Ler Dados</button>
+        </div>
 
-    <hr>
+        <div class="button-container" id="btnCentro">
+            <input type="text" id="txtNome"/> <br>
+            <input type="text" id="txtPreco"/> <br>
+            <button onclick="inserirProdutos()">Inserir</button>
+        </div>
 
-    <input type="text" id="txtNome"/> <br>
-    <input type="text" id="txtPreco"/> <br>
-    <button onclick="inserirProdutos()">Inserir</button>
+        <div class="button-container" id="btnDireita">
+            <button onclick="buscarProdutos()">Buscar Produtos</button>
+        </div>
 
-    <hr>
-    <button onclick="buscarProdutos()">Buscar Produtos</button>
-    <div id="divProdutos"></div>
+        <div id="dados"></div>
+
+        <hr>
+
+        <div id="divProdutos"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
